# llama-index-tools-shortcut

./: pyproject.toml  readme.md
llama_index/tools/shortcut/: __init__.py  base.py
tests/: test_shortcut.py
